<resources>
    <!-- App info -->
    <string name="app_name">用心笔记</string>

    <!-- Calendar -->
    <string name="month_half_name_format">MMM</string>
    <string name="month_name_format">MMMM</string>
    <string name="day_name_format">EEEEE</string>

    <!-- Agenda -->
    <string name="agenda_event_day_duration">d</string>
    <string name="agenda_event_no_events">没有提醒</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_caledar_note">CaledarActivity</string>
    <string name="title_activity_caledar_edit_note">EditCaledarNoteActivity</string>

    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
    </style>

    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />


    <string name="aboutsoft1">  用心笔记的主要模块功能包括：日历、记事、提醒、记账、密码本、资料、设置、帮助。</string>
    <string name="aboutsoft2">  信息防护：因为是个人软件，固用户可以直接进人该软件，但考虑到用户数据的安全性，系统提供私密信息保护功能，只有输入正确信息才能进入私密界面。</string>
    <!--<string name="aboutsoft3">  日历:提供基础的日历査询，可査看每超级记事本的主要模块功能包括：日历、记事、记事提醒、天气提醒、密码本、资料、更多。</string>-->
    <!--<string name="aboutsoft4">用户登录：用户在登录软件时，需输人正确的密码才可进人。</string>-->
    <string name="aboutsoft5">  日历:提供基础的日历査询，可査看每日记事和待办事项，可点击某一日期，新建记事和事项。</string>
    <string name="aboutsoft6">  记事:对记事进行增删改查，还可以添加图片。</string>
    <string name="aboutsoft7">  记事提醒:定时提醒。</string>
    <string name="aboutsoft8">  天气提醒：可查看当天和未来两天天气、空气质量和生活建议信息。</string>
    <string name="aboutsoft9">  私密:可保存账号密码、査看、新添、删除记录。</string>
    <string name="aboutsoft10">  便签功能。</string>
</resources>
