<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="xyx.njtech.edu.cn.diligentnode.pager.AboutMeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_aboutme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_developer1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft2" />
            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/ll_developer3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft3" />
            </LinearLayout>-->

            <!--<LinearLayout
                android:id="@+id/ll_developer4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft4" />
            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/ll_developer5"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer6"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer7"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer9"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_developer10"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutsoft10" />
            </LinearLayout>
         </LinearLayout>
   </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>